tests/import_feature_extras_bad.stderr
tests/import_feature_extras_bad.hop:2:1: error: HOP2025: feature imports must be path-only (no alias or symbol list)
