tests/import_feature_extras_bad.hop
// Verifies import feature extras is rejected.
import "hophop/feature/optional" as opt

fn main() {}
